rest-services/users/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deployment
  labels:
    app: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: users-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
