rest-services/users/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: user-api-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
