rest-services/users/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-nginx
  rules:
    - http:
        paths:
          - path: /api/user/v1
            pathType: Prefix
            backend:
              service:
                name: user-api-service
                port:
                  number: 8080
          - path: /api/user/v2
            pathType: Prefix
            backend:
              service:
                name: user-api-service-2
                port:
                  number: 8080
